apps/namespaces/media-server/sabnzbd/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: sabnzbd-data
          mountPath: /config
        - name: nfs-media
          mountPath: /media/downloads/usenet
          subPath: downloads/usenet
      volumes:
      - name: sabnzbd-data
        persistentVolumeClaim:
          claimName: sabnzbd-data-pvc
      - name: nfs-media
        persistentVolumeClaim:
          claimName: media-server-nfs-pvc
