apps/namespaces/media-server/sabnzbd/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: sabnzbd
  type: ClusterIP
