apps/namespaces/media-server/sabnzbd/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media-server
spec:
  rules:
    - host: sabnzbd.home
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  number: 80
            path: /
            pathType: Prefix
